--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,22 +34,10 @@ jobs:
       - name: Create .nojekyll file
         run: touch ./dist/.nojekyll
 
-      - name: Upload to S3
-        uses: jakejarvis/s3-sync-action@master
+      - name: Deploy
+        uses: lbertenasco/s3-deploy@v1
         with:
-          args: --acl public-read --delete
-        env:
-          AWS_S3_BUCKET: randhir-kumar.in
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-south-1
-          SOURCE_DIR: dist
-
-      - name: Invalidate CloudFront cache
-        uses: awact/cloudfront-action@v1.5.0
-        with:
-          distribution: E23JJOCV5LATWO
-          paths: "/*"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          folder: dist
+          bucket: randhir-kumar.in
+          dist-id: E23JJOCV5LATWO
+          invalidation: /*
